--- a/Config/Loon-Lesong.conf
+++ b/Config/Loon-Lesong.conf
@@ -126,9 +126,9 @@ Final = select,Proxy,img-url = https://raw.githubusercontent.com/Koolson/Qure/ma
 # > 节点选择
 Proxy = select,Auto,Fallback,Others,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Rocket.png
 # > 自动筛选
-Auto = url-test,url = http://cp.cloudflare.com/generate_204,interval = 300,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Auto.png
+Auto = url-test,🚀 手动选择,url = http://cp.cloudflare.com/generate_204,interval = 300,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Auto.png
 # > 故障转移
-Fallback = fallback,url = http://cp.cloudflare.com/generate_204,interval = 300,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Available.png
+Fallback = fallback,🚀 手动选择,url = http://cp.cloudflare.com/generate_204,interval = 300,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Available.png
 # > 国外网站
 Foreign = select,Proxy,Auto,Fallback,HongKong,TaiWan,Japan,Singapore,America,Others,DIRECT,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Global.png
 # > 国内网站
